# Workspaces-cgimap

./: CMakeLists.txt  README
contrib/: CMakeLists.txt
contrib/jwt-cpp/: CMakeLists.txt  README.contrib
docker/ubuntu/: Dockerfile2404
include/cgimap/: data_selection.hpp  data_update.hpp
include/cgimap/backend/apidb/: pgsql_update.hpp  readonly_pgsql_selection.hpp
include/cgimap/workspaces/: tdei_auth.hpp  tenant.hpp  types.hpp
src/: CMakeLists.txt  process_request.cpp
src/backend/apidb/: pgsql_update.cpp  readonly_pgsql_selection.cpp
src/workspaces/: tdei_auth.cpp  tenant.cpp
test/: CMakeLists.txt  staticxml.cpp  test_empty_selection.hpp
